Add second demo for swipeable view holder

--- a/app/src/main/res/layout/view_holder_swipe_demo_activity.xml
+++ b/app/src/main/res/layout/view_holder_swipe_demo_activity.xml
@@ -1,11 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
-  android:id="@+id/recyclerView"
-  xmlns:tools="http://schemas.android.com/tools"
-  android:layout_width="match_parent"
-  android:layout_height="match_parent"
-  xmlns:app="http://schemas.android.com/apk/res-auto"
-  app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-  tools:itemCount="10"
-  tools:listitem="@layout/item_view"
-  tools:context=".ViewHolderSwipeDemo" />
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:divider="?android:listDivider"
+    android:orientation="vertical"
+    android:showDividers="middle"
+    tools:context=".ViewHolderSwipeDemo">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginBottom="20dp"
+        android:text="Example 1 - Archive emails"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
+        tools:ignore="HardcodedText" />
+
+    <include layout="@layout/swipeable_view_1" />
+
+    <include layout="@layout/swipeable_view_1" />
+
+    <include layout="@layout/swipeable_view_1" />
+
+    <include layout="@layout/swipeable_view_1" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginBottom="20dp"
+        android:text="Example 2 - iOS Messages Notify/Delete"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
+        tools:ignore="HardcodedText" />
+
+    <include layout="@layout/swipeable_view_2" />
+
+    <include layout="@layout/swipeable_view_2" />
+
+    <include layout="@layout/swipeable_view_2" />
+
+    <include layout="@layout/swipeable_view_2" />
+
+</LinearLayout>
