Improve swipeable view 2

--- a/app/src/main/res/layout/swipeable_view_2.xml
+++ b/app/src/main/res/layout/swipeable_view_2.xml
@@ -11,12 +11,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:padding="16dp"
-        android:text="Message"
+        android:text="A sample long message text"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         tools:ignore="HardcodedText" />
 
     <View
