--- a/app/src/main/res/layout/swipeable_view_2.xml
+++ b/app/src/main/res/layout/swipeable_view_2.xml
@@ -23,7 +23,7 @@
         android:elevation="4dp" />
 
     <View
-        android:id="@+id/turnOffNotification"
+        android:id="@+id/notification"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@android:color/holo_purple" />
@@ -47,7 +47,7 @@
         android:layout_marginStart="24dp"
         android:src="@drawable/ic_notifications_off"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="@id/turnOffNotification"
+        app:layout_constraintStart_toStartOf="@id/notification"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="ContentDescription" />
 
